adição de responsividade 544px e 1024 px

--- a/blocks/body.css
+++ b/blocks/body.css
@@ -9,3 +9,9 @@
     flex-direction: column;
     padding: 0 148px;
 }
+
+@media all and (max-width: 1024px) {
+    .page {
+        padding: 0;
+    }
+}
