--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -7,4 +7,23 @@
     margin: 0;
     padding: 0;
     text-align: center;
+    letter-spacing: 0%;
+}
+
+/*Ponto Médio para 768px*/
+
+@media all and (max-width: 1024px) {
+    .footer {
+        margin: 88px auto 0;
+        max-width: 166px;
+    }
+}
+
+/*Ponto Médio para 320px*/
+
+@media all and (max-width: 544px) {
+    .footer {
+        margin: 64px auto 0;
+        max-width: 166px;
+    }
 }
