--- a/blocks/intro.css
+++ b/blocks/intro.css
@@ -1,41 +1,117 @@
 .intro {
     display: flex;
     flex-direction: column;
-    margin: 92px auto 0 0;
+    margin: 0 auto;
     max-width: 830px;
+    letter-spacing: 0%;
 }
 
 .intro__title {
     max-width: 830px;
-    max-height: 116px;
+    font-family: "Inter", sans-serif;
     font-weight: 900;
     font-size: 54px;
     line-height: 58px;
-    margin: 0;
+    margin: 92px 0 0;
+    letter-spacing: 0%;
 }
 
 .intro__quote {
     max-width: 738px;
-    max-height: 68px;
+    font-family: "Inter", sans-serif;
     font-weight: 400;
     font-size: 24px;
     line-height: 34px;
     margin: 40px 0 0;
+    letter-spacing: 0%;
 }
 
 .intro__quote-credit {
     max-width: 732px;
-    max-height: 34px;
+    font-family: "Inter", sans-serif;
     font-size: 24px;
     line-height: 34px;
     text-align: right;
     margin: 10px 0 0;
+    letter-spacing: 0%;
 }
 
 .intro__content {
     max-width: 722px;
-    max-height: 182px;
     font-size: 16px;
     line-height: 163%;
+    letter-spacing: 0%;
     margin: 76px 0 0;
+}
+
+/*Ponto Médio para 768px*/
+
+@media all and (max-width: 1024px) {
+    .intro {
+        padding: 0 24px;
+    }
+
+    .intro__title {
+        max-width: 707px;
+        font-size: 45px;
+        line-height: 49px;
+        margin: 90px auto 0;
+    }
+
+    .intro__quote {
+        max-width: 720px;
+        font-size: 24px;
+        line-height: 34px;
+        margin: 50px auto 0;
+    }
+
+    .intro__quote-credit {
+        max-width: 720px;
+        font-size: 24px;
+        line-height: 34px;
+        margin: 0;
+    }
+
+    .intro__content {
+        max-width: 720px;
+        font-size: 16px;
+        line-height: 163%;
+        margin: 32px auto 0;
+    }
+}
+
+/*Ponto Médio para 320px*/
+
+@media all and (max-width: 544px) {
+    .intro {
+        padding: 0 16px;
+    }
+
+    .intro__title {
+        max-width: 288px;
+        font-size: 32px;
+        line-height: 35px;
+        margin: 64px auto 0;
+    }
+
+    .intro__quote {
+        max-width: 288px;
+        font-size: 24px;
+        line-height: 30px;
+        margin: 40px auto 0;
+    }
+
+    .intro__quote-credit {
+        max-width:288px;
+        font-size: 24px;
+        line-height: 34px;
+        margin: 0;
+    }
+
+    .intro__content {
+        max-width: 288px;
+        font-size: 16px;
+        line-height: 163%;
+        margin: 32px auto 0;
+    }
 }
