--- a/blocks/body.css
+++ b/blocks/body.css
@@ -10,8 +10,16 @@
     padding: 0 148px;
 }
 
+/*Ponto Médio para 768px*/
+
 @media all and (max-width: 1024px) {
     .page {
         padding: 0;
     }
+}
+
+/*Ponto Médio para 320px*/
+
+@media all and (max-width: 544px) {
+
 }
